--- a/History.rdoc
+++ b/History.rdoc
@@ -1,4 +1,6 @@
-=== 1.2.2 (TBD)
+=== 1.2.2 (2011-9-11)
+* Broaden to rjack-logback ~> 1.1
+* Upgrade to tarpit ~> 1.3.3 (build)
 
 === 1.2.1 (2011-3-26)
 * Upgrade to logback ~> 1.1.1
