--- a/History.rdoc
+++ b/History.rdoc
@@ -1,4 +1,5 @@
 === 1.2.4 (TBD)
+* Upgrade/broaden to slf4j [1.6.5,1.8), logback ~> 1.2
 
 === 1.2.3 (2012-3-18)
 * Upgrade to tarpit ~> 2.0, bundler Gemfile, gemspec (build)
